refactor: add laptop media query css rules to fix home layout

--- a/MusicPlatform/Views/Home/Index.cshtml
+++ b/MusicPlatform/Views/Home/Index.cshtml
@@ -102,7 +102,7 @@
                      data-scroll-reveal="enter left move 30px over 0.6s after 0.4s">
                     <h1>Discover and Share <em>Music</em></h1>
                     <p>Your platform for emerging artists and music lovers. Upload your tracks, connect with fans, and discover your next favorite song.</p>
-                    <a href="#about" class="main-button-slider">GET STARTED</a>
+                    <a a asp-area="Identity" asp-page="/Account/Register" data-turbo="false" class="main-button-slider">GET STARTED</a>
                     <a href="#top-tracks" class="secondary-button-slider scroll-to-section">EXPLORE</a>
                 </div>
             </div>
