refactor: disable Turbo Hotwired on forms in Login and Register for appropriate validation messages

--- a/MusicPlatform/Areas/Identity/Pages/Account/Register.cshtml
+++ b/MusicPlatform/Areas/Identity/Pages/Account/Register.cshtml
@@ -114,7 +114,7 @@
         <div class="register-image-container"></div>
 
         <div class="register-form-container">
-            <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
+            <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post" data-turbo="false">
                 <div class="section-heading text-center">
                     <h2>Create a <em>New Account</em></h2>
                 </div>
@@ -142,7 +142,7 @@
                 <button id="registerSubmit" type="submit" class="main-button">Register</button>
 
                 <div class="form-links">
-                    <a asp-page="./Login" asp-route-returnUrl="@Model.ReturnUrl">Already have an account? Log in</a>
+                    <a asp-page="./Login" asp-route-returnUrl="@Model.ReturnUrl" data-turbo="false">Already have an account? Log in</a>
                 </div>
             </form>
         </div>
