--- a/MusicPlatform/Areas/Identity/Pages/Account/Login.cshtml
+++ b/MusicPlatform/Areas/Identity/Pages/Account/Login.cshtml
@@ -122,12 +122,10 @@
 
         <div class="login-form-container">
             <section>
-                <form id="account" method="post">
+                <form id="account" method="post" data-turbo="false">
                     <div class="section-heading text-center">
                         <h2>Log In to <em>Your Account</em></h2>
                     </div>
-
-                    <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
 
                     <div class="form-group">
                         <label asp-for="Input.Email" class="form-label"></label>
@@ -148,13 +146,15 @@
                         </label>
                     </div>
 
+                    <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
+
                     <div>
                         <button id="login-submit" type="submit" class="main-button">Log in</button>
                     </div>
 
                     <div class="form-links">
-                        <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
-                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
+                        <a id="forgot-password" asp-page="./ForgotPassword" data-turbo="false">Forgot your password?</a>
+                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl" data-turbo="false">Register as a new user</a>
                     </div>
                 </form>
             </section>
