--- a/MusicPlatform/Views/Track/Index.cshtml
+++ b/MusicPlatform/Views/Track/Index.cshtml
@@ -284,7 +284,7 @@
             }
             else
             {
-                <div class="col-lg-12 text-center">
+                <div class="col-lg-12 text-center" style="grid-column: 1 / -1;">
                     @if (!string.IsNullOrEmpty(Model.SearchString))
                     {
                         <p>No tracks found matching your search for "@Model.SearchString".</p>
